# digichess

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md
docs/: .~lock.chipkit-port-pinout.xlsx#  chipkit-port-pinout.xlsx
docs/abstract/: abstract.aux  abstract.fdb_latexmk  abstract.fls  abstract.tex
docs/style/: style.tex
drivers/stockfish-if/: main.c  upload.sh
include/: Display.h  TestStruct.h  bitmap.h  bitops.h  buzzer.h  delay.h  game_logic.h  grid.h  math.h  memory.h  reset.h  state_management.h  stringops.h  sys_defines.h  tests.h  uart.h
include/bmp/: bmp_decode.h  bmp_funcs.h  bmp_structs.h
include/chess/: chess.h
include/drivers/ili9341/: Display.h  lcd_comms.h  lcd_controls.h  lcd_defines.h  lcd_draw.h  lcd_setup.h  lcd_tests.h  lcd_touch.h  lcd_utils.h
include/drivers/stockfish/: stockfish.h
include/drivers/ws2812b/: ws2812b.h  ws2812b_test.h
include/files/fonts/: ComicSansMS.ttf.h
include/files/images/: bishop.bmp.h  knight.bmp.h  logo.bmp.h  queen.bmp.h  rook.bmp.h  viewsonic_1bit.bmp.h  viewsonic_4bit.bmp.h  viewsonic_4bit_uncompressed.bmp.h  viewsonic_8bit.bmp.h
include/fonts/: ArialAscii.ttf.h  ComicSansMS.ttf.h
include/gui/: gui.h  gui_register_menus.h  menu_defines.h
include/gui/menus/: menu_game.h  (+5 more)
include/images/: viewsonic_1bit.bmp.h  viewsonic_2bit.bmp.h  viewsonic_4bit.bmp.h  viewsonic_4bit_uncompressed.bmp.h  viewsonic_8bit.bmp.h  viewsonic_8bit_uncompressed.bmp.h
include/lut/: sqrt.lut.h
include/ttf/: ttf_cache.h  ttf_draw.h  ttf_funcs.h  ttf_glyphread.h  ttf_scan.h  ttf_structs.h
src/: Display.c  bitmap.c  buzzer.c  delay.c  game_logic.c  grid.c  handlers.c  main.c  math.c  memory.c  reset.c  stringops.c  tests.c  uart.c  vectors.S
src/bmp/: bmp_decode.c  bmp_funcs.c
src/chess/: chess.c  chess.h  main.c
src/gui/: gui.c  gui_register_menus.c
src/ttf/: ttf_cache.c  ttf_draw.c  ttf_funcs.c  ttf_glyphread.c  ttf_scan.c
tests/: math.test.cpp  memory.test.cpp  stringops.test.cpp
tests/chess/: chess.test.cpp
tools/: generate_file_header.py  generate_font_header.py  generate_sqrt_lut.py  import_file.py
(+26 files in other folders)
